--- a/style.css
+++ b/style.css
@@ -56,12 +56,49 @@ body {
   transition: opacity 1s;
 }
 .country__img {
-  border-radius: 2rem;
+  border-radius: 1rem;
+  display: block;
   height: 100%;
   width: 100%;
 }
+
+.country__img:hover {
+  /* opacity: 0.4; */
+  background: rgb(0, 0, 0);
+}
+
+.box_img::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.45);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+
+}
+
+.movie-card:hover::after {
+  opacity: 1;
+}
+
+
+
+.hideBtn{
+  /* position: relative; */
+  /* top: 80%; */
+  /* bottom: 0; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  padding: 30px;
+  cursor: pointer;
+}
+
+
 .country {
-  border-radius: 2rem;
+  /* border-radius: -10rem; */
   position: relative;
   /* transition: opacity 1s; */
   /* opacity: 1; */
@@ -80,6 +117,14 @@ body {
   margin: 0 0 50px 2rem;
   /* overflow: hidden; */
 }
+
+.box-img:hover .watchBtn{
+  opacity: 1;
+  /* scale: 5; */
+  pointer-events: auto;
+
+}
+
 header {
   position: fixed;
   width: 100%;
@@ -758,6 +803,63 @@ section {
   color: rgb(219, 216, 216);
   font-size: 16px;
   text-shadow: 1px 10px 5px rgb(61, 61, 61);
+}
+
+/* From Uiverse.io by vinodjangid07 */ 
+.buttoninfo {
+  z-index: 90;
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: rgb(32, 32, 32);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5) inset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.svgIcon {
+  z-index: 2;
+}
+
+.buttoninfo::before {
+  width: 35px;
+  height: 22px;
+  background: linear-gradient(to bottom,rgba(255, 255, 255, 0.575), rgba(0, 0, 0, 0.103));
+  position: absolute;
+  content: "";
+  top: 3.6px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.tooltip {
+  position: absolute;
+  top: -40px;
+  opacity: 0;
+  background-color: rgb(134, 134, 134);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: .5s;
+  pointer-events: none;
+  letter-spacing: 0.5px;
+}
+
+.buttoninfo:hover .tooltip {
+  opacity: 1;
+  transition-duration: .5s;
+}
+
+.buttoninfo:hover {
+  background-position: right;
+  transition-duration: 1s;
 }
 
 
