--- a/style.css
+++ b/style.css
@@ -68,22 +68,19 @@ body {
 }
 
 .box_img::after {
-  content: "";
+  content: '';
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.45);
   opacity: 0;
   transition: opacity 0.3s ease;
-
 }
 
 .movie-card:hover::after {
   opacity: 1;
 }
 
-
-
-.hideBtn{
+.hideBtn {
   /* position: relative; */
   /* top: 80%; */
   /* bottom: 0; */
@@ -95,7 +92,6 @@ body {
   padding: 30px;
   cursor: pointer;
 }
-
 
 .country {
   /* border-radius: -10rem; */
@@ -118,11 +114,10 @@ body {
   /* overflow: hidden; */
 }
 
-.box-img:hover .watchBtn{
+.box-img:hover .watchBtn {
   opacity: 1;
   /* scale: 5; */
   pointer-events: auto;
-
 }
 
 header {
@@ -572,12 +567,12 @@ section {
   object-fit: cover;
 }
 
-.box .box-img img:hover {
-  transform: scale(1.03, 1.03);
+.box-img:hover {
+  transform: scale(1.1, 1.1);
   /* z-index: 1; */
 
   /* transform: translateY(10px); */
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.3s linear smooth;
 }
 
 .box h3 {
@@ -592,7 +587,7 @@ section {
 .coming-container {
   display: grid;
   gap: 1rem;
-  max-width: 968px;
+  max-width: 918px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
@@ -774,11 +769,11 @@ section {
   color: var(--bg-color);
 }
 
-.link{
+.link {
   color: aqua;
 }
 
-/* From Uiverse.io by vishal2231179 */ 
+/* From Uiverse.io by vishal2231179 */
 .button {
   cursor: pointer;
   padding: 10px 30px 10px 30px;
@@ -805,7 +800,7 @@ section {
   text-shadow: 1px 10px 5px rgb(61, 61, 61);
 }
 
-/* From Uiverse.io by vinodjangid07 */ 
+/* From Uiverse.io by vinodjangid07 */
 .buttoninfo {
   z-index: 90;
   width: 50px;
@@ -828,9 +823,13 @@ section {
 .buttoninfo::before {
   width: 35px;
   height: 22px;
-  background: linear-gradient(to bottom,rgba(255, 255, 255, 0.575), rgba(0, 0, 0, 0.103));
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.575),
+    rgba(0, 0, 0, 0.103)
+  );
   position: absolute;
-  content: "";
+  content: '';
   top: 3.6px;
   border-radius: 50%;
   z-index: 1;
@@ -847,20 +846,379 @@ section {
   display: flex;
   align-items: center;
   justify-content: center;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   pointer-events: none;
   letter-spacing: 0.5px;
 }
 
 .buttoninfo:hover .tooltip {
   opacity: 1;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 
 .buttoninfo:hover {
   background-position: right;
   transition-duration: 1s;
 }
+
+/* ---------- MODAL BASE ---------- */
+.modal {
+  position: fixed;
+  inset: 0;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* hidden state */
+.modal.hidden {
+  pointer-events: none;
+}
+
+/* overlay */
+.modal-overlay {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+/* modal box */
+.modal-content {
+  position: relative;
+  background: #121212; /* charcoal black */
+  border: 1px solid #c1121f; /* deep red */
+  border-radius: 12px;
+  width: 90%;
+  max-width: 600px;
+  padding: 2rem;
+
+  transform: translateY(40px) scale(0.95);
+  opacity: 0;
+  transition: all 0.35s ease;
+  z-index: 2;
+}
+
+/* .modal 
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 50%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #141414 100%);
+  } */
+
+/* visible state */
+.modal:not(.hidden) .modal-overlay {
+  opacity: 1;
+}
+
+.modal:not(.hidden) .modal-content {
+  opacity: 1;
+  transform: translateY(0) scale(1);
+}
+
+/* close button */
+.modal-close {
+  position: absolute;
+  top: 12px;
+  right: 14px;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  color: #c1121f;
+  cursor: pointer;
+}
+
+/* text */
+.modal-body h2 {
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.modal-body p {
+  color: #bbb;
+}
+
+.title-container {
+  position: relative;
+  min-height: 100%;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  background-color: #141414;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  animation: fade_in 300ms linear forwards;
+  overflow: hidden;
+}
+
+.title-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: #141414;
+  border-radius: 50%;
+  font-size: 25px;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.title-content {
+  position: relative;
+  margin-top: -250px;
+  padding: 0 40px 40px;
+  z-index: 1;
+}
+
+.title-logo {
+  display: flex;
+  align-items: flex-end;
+  height: 150px;
+  width: 100%;
+  max-width: 50%;
+}
+
+.title-actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 15px;
+  margin-top: 20px;
+}
+
+.title-grid {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  margin-top: 50px;
+}
+
+.title-col {
+  width: 100%;
+  padding-right: 20px;
+}
+
+.title-tagline {
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.title-meta {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 10px;
+  margin-top: 5px;
+  color: #a3a3a3;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.title-description {
+  margin-top: 20px;
+  line-height: 1.4;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.title-col {
+  &:last-child {
+    padding-right: 0;
+  }
+}
+
+.title-section {
+  margin-top: 50px;
+}
+
+.display-cast-btn {
+  padding: 12px 24px;
+  background: linear-gradient(to right, #282e3dce, #282e3d86);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.title-section {
+  margin-top: 50px;
+}
+
+.title-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.title-episodes {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.episode {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+.episode-number {
+  color: #a3a3a3;
+  min-width: 70px;
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.episode-image {
+  width: 100%;
+  max-width: 130px;
+  aspect-ratio: 16/9;
+  border-radius: 5px;
+}
+
+.episode-text {
+  width: 100%;
+  margin-left: 20px;
+}
+
+.episode-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.episode-description {
+  margin-top: 10px;
+  color: #a3a3a3;
+  font-size: 14px;
+}
+
+.title-section {
+  margin-top: 50px;
+}
+
+.title-cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px 15px;
+  margin-top: 20px;
+}
+
+.media-card::after {
+  content: '';
+  display: block;
+  position: absolute;
+  height: 20%;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
+  transition: opacity 0.2s ease-in-out;
+  z-index: 0;
+}
+
+.media-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  background-color: #000;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #0000004d;
+  aspect-ratio: 2/3;
+  overflow: hidden;
+  transition: transform 0.2s ease-in-out;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.media-card img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  object-fit: cover;
+}
+
+.media-card-actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  column-gap: 10px;
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  width: calc(100% - 30px);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  z-index: 1;
+}
+
+.title-actions .button {
+  height: 44px;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  color: #000;
+  background-color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.title-actions .button {
+  &:not(:first-child) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 44px;
+    width: auto;
+    padding: 0 15px;
+    border-radius: 5px;
+  }
+}
+
+
+.title-backdrop {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16/9;
+  background-color: black;
+  background-position: center;
+  background-size: cover;
+}
+
+.title-backdrop 
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 50%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #141414 100%);
+  }
 
 
 @media (max-width: 1080px) {
